Search by name, loading icon, styling

--- a/html/contact.html
+++ b/html/contact.html
@@ -45,6 +45,7 @@
 
                 <button>Submit</button>
             </form>
+            <div id="successMessage">Form submitted successfully!</div>
         </main>
         <script src="../js/contact.js"></script>
     </body>
