--- a/html/details.html
+++ b/html/details.html
@@ -10,7 +10,9 @@
       <a href="index.html">Home</a>
       <a href="contact.html">Contact Us</a>
     </header>
-    <div id="pokemon-details"></div>
-    <script src="../js/details.js"></script>
+    <main>
+      <div id="pokemon-details"></div>
+      <script src="../js/details.js"></script>
+    </main>
   </body>
 </html>
